//
//  ContentView.swift
//  MyMemoApp
//
//  Created by 石原脩平 on 2025/07/16.
//

import SwiftUI

struct ContentView: View {
    var body: some View {
        TabView {
            MemoListView()
                .tabItem {
                    Image(systemName: "doc.text")
                    Text("メモ")
                }
            
            GroupManageView()
                .tabItem {
                    Image(systemName: "folder")
                    Text("グループ")
                }
            
            TrashView()
                .tabItem {
                    Image(systemName: "trash")
                    Text("ゴミ箱")
                }
            
            SettingsView()
                .tabItem {
                    Image(systemName: "gearshape")
                    Text("設定")
                }
        }
    }
}

#Preview {
    ContentView()
        .environmentObject(DataManager.shared)
}
